--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -178,4 +178,9 @@ The Goings On app, a free guide to New York City culture from the staff of The N
         <item>Abbasya</item>
         <item>Others</item>
     </string-array>
+
+    <string name="facebook_app_id">127520928614512</string>
+    <string name="fb_login_protocol_scheme">fb127520928614512</string>
+
+
 </resources>
